# push-swap

./: .dir-locals.el  .env  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  README.org  checker_bonus.c  checker_bonus.h  compile_commands.json  error.c  helpers.c  insert_sort.c  main.c  main_bonus.c  operations.h  operations_2.c  operations_3.c  operations_4.c  push_swap.c  push_swap.h  random_nbrs.org  sort_less_than_6.c
includes/: operations.h  push_swap.h
libft/: CMakeLists.txt  Makefile  ft_atoi.c  ft_atoi_long.c  ft_bzero.c  ft_calloc.c  ft_get_empty_str.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_jump_digits.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_num_of_digits.c  ft_num_of_digits_unsigned.c  ft_ptr_to_hex.c  ft_put_unsigned_int_fd.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  (+16 more)
run/: main.c
src/: basic_operations.c  checker_bonus.c  error.c  errors.c  extract_numbers.c  handle_op_bonus.c  heap_sort.c  helpers.c  insert_sort.c  insert_sort_2.c  insert_sort_3.c  merge_sort.c  merging.c  operations.c  operations_1.c  operations_2.c  operations_3.c  partially_sort_with_five.c  push_swap.c  rotations_1.c  rotations_2.c  rotations_3.c  sort_five_elements.c  sort_four_elements.c  sort_less_than_6.c  sort_less_than_six.c  sort_three_elements.c  stack_helpers.c  swap_and_push.c  validation_bonus.c
tests/: generate_tests.org  head_sort.org  test_checker.py  test_errors.cpp  (+17 more)
(+2 files in other folders)
